# EP-BOLFI

./: .flake8  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.cfg
Python/: analytic_vs_epbolfi_results.py  calculate_experimental_and_simulated_features.py  collect_gitt_estimation_results.py  correlation_visualization.py  evaluate_gitt_estimation_confidence.py  evaluate_spme_benchmark_confidence.py  gitt_visualization.py  joint_resistance.py  measurement_plot.py  ocv_from_cccv_and_gitt.py  run_estimation.py  sensitivity_visualization.py  spme_benchmark.py  verify_estimation.py
Python/models/: DFN.py  SPM.py  solversetup.py  standard_parameters.py
Python/parameters/estimation/: gitt_basf.py  spme_benchmark_unimodal.py
Python/parameters/models/: basf_gitt_test_cell.py  spme_benchmark_cell.py
Python/utility/: fitting_functions.py  preprocessing.py  read_csv_datasets.py  visualization.py
documentation/html/: .buildinfo  api.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
documentation/html/.doctrees/: api.doctree  contributing.doctree  environment.pickle  index.doctree  readme.doctree
documentation/html/_sources/: api.rst.txt  contributing.rst.txt  readme.rst.txt
documentation/html/_static/: documentation_options.js
documentation/html/api/: ep_bolfi.html  ep_bolfi.kadi_tools.collect_and_fit_spline_to_parameterization_points.get_valid_filename.html  ep_bolfi.kadi_tools.collect_and_fit_spline_to_parameterization_points.html  (+258 more)
documentation/latex/: ep-bolfi.aux  ep-bolfi.fdb_latexmk  ep-bolfi.fls  ep-bolfi.idx  ep-bolfi.ind  ep-bolfi.out  ep-bolfi.tex  ep-bolfi.toc
documentation/source/: conf.py  index.rst
ep_bolfi/: Doxyfile  __init__.py  add_fontspec_to_doc.tex  collect_gitt_estimation_results.py  evaluate_gitt_estimation_confidence.py  evaluate_spme_benchmark_confidence.py  gitt_visualization.py  joint_resistance.py  measurement_plot.py  ocv_from_cccv_and_gitt.py  run_estimation.py  spme_benchmark.py  verify_estimation.py
ep_bolfi/kadi_tools/: __init__.py  collect_and_fit_spline_to_parameterization_points.py  combine_measurement_segments.py  convert_csv_to_parquet.py  eis_parameterization.py  eis_preprocessing.py  eis_visualization.py  extract_measurement_protocol.py  extract_ocv_curve.py  extract_overpotential.py  fit_and_plot_ocv.py  fit_exponential_decay.py  gitt_parameterization.py  gitt_preprocessing.py  gitt_visualization.py  plot_measurement.py  read_csv_datasets.py  read_hdf5_datasets.py  read_measurement_from_parquet.py  select_measurement_segments.py  store_measurement_as_parquet.py
ep_bolfi/models/: SPMe.py  analytic_impedance.py  assess_effective_parameters.py  ecm_time_domain_simulation.py  electrolyte.py  equivalent_circuits.py  solversetup.py  standard_parameters.py
ep_bolfi/optimization/: EP_BOLFI.py
ep_bolfi/utility/: dataset_formatting.py  fitting_functions.py  preprocessing.py  read_csv_datasets.py  visualization.py
examples/: analytic_impedance_visualization.py  analytic_vs_epbolfi_results.py  automation_data_download.py  automation_gitt_analysis.py  calculate_experimental_and_simulated_features.py  correlation_visualization.py  evaluate_gitt_estimation_confidence.py  evaluate_spme_benchmark_confidence.py  gitt_visualization.py  joint_resistance.py  measurement_plot.py  ocv_from_cccv_and_gitt.py  ocv_visualization.py  run_estimation.py  sensitivity_visualization.py  spme_benchmark_multimodal.py  spme_benchmark_unimodal.py  verify_estimation.py
tests/: test_analytic_impedance.py  test_substitution_dict.py
(+711 files in other folders)
