[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ep-bolfi"
version = "3.0"
description = "EP-BOLFI (Expectation Propagation with Bayesian Optimization for Likelihood-Free Inference) extends the simulator optimizer BOLFI with the data featurization of Expectation Propagation."
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
authors = [
  {name = "Yannick Kuhn", email = "yannick.kuhn@dlr.de"}
]
maintainers = [
  {name = "Yannick Kuhn", email = "yannick.kuhn@dlr.de"}
]
requires-python = ">= 3.8"
dependencies = [
  'elfi',
  'h5py',
  'kadi-apy',
  'matplotlib',
  'numpy',
  'pyarrow',
  'pybamm',
  'scikit-learn',
  'pyimpspec',
  'scipy',
  'sympy',
  'tabulate',
  'xmlhelpy',
  'wheel',
]